tried fixing the reserve home section to be correctly aligned

--- a/Projects/project_2/actual_project/style.css
+++ b/Projects/project_2/actual_project/style.css
@@ -12,6 +12,7 @@ body {
     font-size: medium;
     background-color: #FFE4B5; /* Light Orange background color */
     font-family:"brandon-grotesque", sans-serif;
+    width:80% auto;
   }
   
   #announcement-bar {
@@ -139,6 +140,7 @@ body {
   #cafe-container {
     display: flex;
     align-items: flex start;
+    flex:1
   }
 
   #cafe-photo {
@@ -149,6 +151,7 @@ body {
     padding: 20px;
     padding-top:150px;
     padding-left: 70px;
+   /*flex:1*/ 
   }
 
   h2 {
